syntax = "proto3";

package scratchpad_proto;

message Scratchpad {
  optional string name = 1;
  optional string address = 2;
  optional uint64 data_encoding = 3;
  optional string signature = 4;
  optional string content = 5;
  optional uint64 counter = 6;
}
